# persistent_tracker_follower

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: main_ros.launch.py
persistent_tracker/: config.py  main_ros.py  main_ui.py  target_manager.py
persistent_tracker/ai/: trackers.py
scripts/: annotator.py  config.py  main_ros.py  target_manager.py
scripts/ai/: extractor.py  osnet.py
yolo11n_int8_openvino_model/: metadata.yaml  yolo11n.xml
yolo11n_openvino_model/: metadata.yaml  yolo11n.xml
yolo11s_openvino_model/: metadata.yaml  yolo11s.xml
